// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Number renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF UYcZh"
      disabled={true}
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        medium
      </label>
      <input
        className="sc-dIZBxk doQFno"
        disabled={true}
        placeholder=" "
        type="number"
        value="123"
      />
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF UYcZh"
      disabled={true}
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        large
      </label>
      <input
        className="sc-dIZBxk jkZMpX"
        disabled={true}
        placeholder=" "
        type="number"
        value="123"
      />
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF UYcZh"
      disabled={true}
    >
      <div
        className="sc-MEQRl kBJTEJ"
      >
        <input
          className="sc-dIZBxk ecvoCV"
          disabled={true}
          placeholder=" "
          type="number"
          value="123"
        />
        <label
          className="sc-khrHlC jpbMtc"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        medium
      </label>
      <input
        className="sc-dIZBxk cVUHe"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="sc-fOpBKL eMFfDR"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        large
      </label>
      <input
        className="sc-dIZBxk hTbtXd"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="sc-fOpBKL eMFfDR"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <div
        className="sc-MEQRl kBJTEJ"
      >
        <input
          className="sc-dIZBxk eqlMGL"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="sc-khrHlC jpbMtc"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-fOpBKL eMFfDR"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        medium
      </label>
      <input
        className="sc-dIZBxk doQFno"
        placeholder=" "
        readOnly={true}
        type="number"
        value="1234"
      />
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        large
      </label>
      <input
        className="sc-dIZBxk jkZMpX"
        placeholder=" "
        readOnly={true}
        type="number"
        value="1234"
      />
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <div
        className="sc-MEQRl kBJTEJ"
      >
        <input
          className="sc-dIZBxk ecvoCV"
          placeholder=" "
          readOnly={true}
          type="number"
          value="1234"
        />
        <label
          className="sc-khrHlC jpbMtc"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        medium
      </label>
      <input
        className="sc-dIZBxk doQFno"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        large
      </label>
      <input
        className="sc-dIZBxk jkZMpX"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <div
        className="sc-MEQRl kBJTEJ"
      >
        <input
          className="sc-dIZBxk ecvoCV"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="sc-khrHlC jpbMtc"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        medium
      </label>
      <input
        className="sc-dIZBxk doQFno"
        placeholder="e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        large
      </label>
      <input
        className="sc-dIZBxk jkZMpX"
        placeholder="e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <div
        className="sc-MEQRl kBJTEJ"
      >
        <input
          className="sc-dIZBxk ecvoCV"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="sc-khrHlC jpbMtc"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="sc-dIZBxk doQFno"
        dir="rtl"
        placeholder="e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
        dir="rtl"
      >
        large
      </label>
      <input
        className="sc-dIZBxk jkZMpX"
        dir="rtl"
        placeholder="e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <div
        className="sc-MEQRl kBJTEJ"
      >
        <input
          className="sc-dIZBxk ecvoCV"
          dir="rtl"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="sc-khrHlC ckbtXb"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <input
        className="sc-dIZBxk doQFno"
        placeholder="medium e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <input
        className="sc-dIZBxk jkZMpX"
        placeholder="large e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <div
        className="sc-MEQRl kBJTEJ"
      >
        <input
          className="sc-dIZBxk iGavc"
          placeholder="xlarge e.g. 1234"
          type="number"
        />
        <label
          className="sc-khrHlC jpbMtc"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        medium
      </label>
      <input
        className="sc-dIZBxk bIMVHn"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        large
      </label>
      <input
        className="sc-dIZBxk wgRQw"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <div
        className="sc-MEQRl cVOSay"
      >
        <input
          className="sc-dIZBxk ecvoCV"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="sc-khrHlC jpbMtc"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
